fixed dark mode skins read only color schema

--- a/resources/assets/less/skins/skin-black-dark.less
+++ b/resources/assets/less/skins/skin-black-dark.less
@@ -207,6 +207,10 @@ body {
   background-color: var(--back-main);
   color: var(--text-main);
 }
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+  background-color: var(--back-main);
+  color: var(--text-main);
+}
 .form-control {
   background-color: var(--back-main);
   color: var(--text-main);
